# FastAPIEdisonProject

./: Dockerfile  README.md  compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_02_21_1849-cb7b52dc5193_create_table_users_and_roles.py  2025_02_26_2018-465ced94e868_creating_table_users_and_roles.py
src/: exceptions.py  main.py
src/api_predictions/: predictions_img.py  schemas.py  views.py
src/auth/: dao.py  dependencies.py  schemas.py  shemas.py  utils.py  views.py
src/core/: base_dao.py  config.py  db_helper.py  models.py
static/css/: style.css
static/js/: main.js
templates/: index.html
test/: test_auth_utils.py  test_dao.py  test_db.db
tests/: test_dao.py  test_db.db  test_endpoints.py
